# ATOLL

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  2.6  =3.0.0  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  install.py  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
atoll_agents/: DEPLOYMENT_INSTRUCTIONS.md  README.md
atoll_agents/ghidra_agent/: README.md  agent.toml  ghidra_agent.py  main.py  requirements.txt
docs/: API_USAGE_GUIDE.md  ARCHITECTURE_DIAGRAMS.md  DEPLOYMENT_PORT_ALLOCATION_FIX.md  DEPLOYMENT_QUICK_REFERENCE.md  DEPLOYMENT_REST_API.md  DEPLOYMENT_SERVER.md  DEPLOYMENT_SERVER_ARCHITECTURE.md  DEPLOYMENT_SERVER_DISCOVERY_IMPLEMENTATION.md  DEPLOYMENT_SERVER_IMPLEMENTATION.md  DEPLOYMENT_SERVER_V2_USAGE.md  DEVELOPER_GUIDE.md  ENHANCEMENTS_V1.2.md  ERROR_DIAGNOSTICS_IMPLEMENTATION_SUMMARY.md  INPUT_EDITING.md  INSTALLATION.md  MCP_SPEC_COMPLIANCE_FIX.md  MIGRATION_GUIDE.md  MIGRATION_V1_TO_V2.md  MONITORING_GUIDE.md  REASONING_ENGINE.md  REST_API_SERVER_MODE.md  V2_ROADMAP_TRACKING.md  VERBOSE_DEPLOYMENT_OUTPUT.md  VERBOSE_ERROR_DIAGNOSTICS.md
docs/api/: README.md
docs/examples/: agent.toml
docs/requirements/: ACCEPTANCE_TEST_RESULTS.md  ACCEPTANCE_TEST_SPECIFICATION.md  ARCHITECTURE_DECISIONS.md  REQUIREMENTS_SUMMARY.md  SMART_REQUIREMENTS.md
examples/: .mcpConfig.example.json  .ollama_config.example.json  README.md  deployment_servers.json
nonexistent/ghidra_agent.example/: agent.json
scripts/: README.md  build_executable.py  install.py  validate_installation.py
src/: atoll__init__.py  ollama_mcp_agent__init__.py
src/atoll/: __init__.py  __main__.py  main.py
src/atoll/agent/: __init__.py  agent.py  agent_manager.py  react_engine.py  reasoning.py  root_agent.py  tools.py
src/atoll/config/: __init__.py  manager.py  models.py
src/atoll/deployment/: __init__.py  api.py  auth.py  cli.py  client.py  metrics.py  server.py  storage.py
src/atoll/mcp/: __init__.py  client.py  installer.py  server_manager.py  tool_registry.py  tools.py
src/atoll/plugins/: __init__.py  base.py  manager.py
src/atoll/server/: __init__.py  api.py  models.py  session.py
src/atoll/ui/: __init__.py  colors.py  input_handler.py  prompt_input.py  terminal.py
src/atoll/utils/: __init__.py  async_helpers.py  logger.py  port_manager.py  sanitizer.py  validators.py  venv_utils.py  version_check.py
src/atoll_agents/: README.md
src/atoll_agents/ghidra_agent.example/: ghidra_agent.py
src/ollama_mcp_agent/: __init__.py  main.py
src/ollama_mcp_agent/agent/: __init__.py  agent.py
src/ollama_mcp_agent/config/: __init__.py  manager.py
src/ollama_mcp_agent/ui/: __init__.py  input_handler.py  terminal.py
src/ollama_mcp_agent/utils/: logger.py
tests/: __init__.py  conftest.py
tests/integration/: test_integration.py
tests/unit/: test_agent.py  test_agent_coverage.py  test_agent_extended.py  test_agent_manager.py  test_client_comprehensive.py  test_colors.py  test_colors_comprehensive.py  test_colors_extended.py  test_config_comprehensive.py  test_config_manager.py  test_connectivity.py  test_delete_key.py  test_deployment_api.py  test_deployment_client.py  test_deployment_error_diagnostics.py  test_deployment_server.py  test_documentation.py  test_hierarchical_agent_system.py  test_input_editing.py  test_input_handler.py  test_input_handler_comprehensive.py  test_input_handler_extended.py  test_install.py  test_installer.py  test_logger_comprehensive.py  test_main.py  test_main_comprehensive.py  test_main_coverage.py  test_main_entry.py  test_main_extended.py  test_main_help.py  test_main_install.py  test_main_shutdown.py  test_main_startup_confirmation.py  test_mcp_client.py  test_mcp_client_extended.py  test_mcp_protocol_full.py  test_mcp_spec_compliance.py  test_mcp_tools.py  test_plugins.py  (+15 more)
