[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atoll"
version = "2.0.0"
description = "LangChain-based agent integrating Ollama with MCP servers"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Ollama MCP Contributors"}
]
keywords = ["ollama", "mcp", "langchain", "agent", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-ollama>=0.1.0",
    "ollama>=0.1.7",
    "aiohttp>=3.9.0",
    "colorama>=0.4.6",
    "jsonschema>=4.20.0",
    "pydantic>=2.6.0",
    "prompt-toolkit>=3.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "types-aiofiles",
    "types-colorama",
]

test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[project.urls]
Homepage = "https://github.com/Buttje/ATOLL"
Documentation = "https://github.com/Buttje/ATOLL/tree/main/docs"
Repository = "https://github.com/Buttje/ATOLL"
Issues = "https://github.com/Buttje/ATOLL/issues"
Changelog = "https://github.com/Buttje/ATOLL/blob/main/CHANGELOG.md"

[project.scripts]
atoll = "atoll.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
atoll = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py39"]
include = "\\.pyi?$"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::RuntimeWarning:unittest.mock",
    # Ignore warnings from pytest garbage collection of mock coroutines
    "ignore:coroutine.*was never awaited:RuntimeWarning",
    # Ignore asyncio pipe closure warnings during test cleanup
    "ignore:Exception ignored.*_ProactorBasePipeTransport:pytest.PytestUnraisableExceptionWarning",
    "ignore:Exception ignored.*BaseSubprocessTransport:pytest.PytestUnraisableExceptionWarning",
]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ARG", "S101"]  # Allow unused args and asserts in tests

[tool.ruff.lint.isort]
known-first-party = ["atoll"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
files = ["src/atoll"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
